# slint-icons

./: .gitignore  Cargo.toml  cspell.json
example/: Cargo.toml  build.rs
example/ui/: main.slint
src/: lib.rs
tools/: generator.rs
ui/: icon.slint  material.slint
ui/material/: filled.slint  outlined.slint  round.slint  sharp.slint  two_tone.slint
